 - More deprecated items now have the `[[deprecated]]` attribute.
 - Document the concept of transaction focus.
 - Error messages more often report query description, if given.
 - Suppress spurious deprecation messages on Visual Studio. (#402)
 - Correct error when prepared/param statement clashes with tx focus. (#401)
 - `from_stream` with `from_query` now has a convenient factory function.
7.3.0
 - `stream_to` now quotes and escapes its table name.
 - Removed `transaction_base::classname()`.  Did anyone ever use it?
 - Internal reorg of the `transaction` and `transactionfocus` hierarchies.
 - Removed the only case of virtual inheritance, related to `namedclass`.
 - Internal `concat()` for faster, simpler string concatentation.
 - Fix compile omission in string conversions for `nullptr_t`.
 - `pqxx::size_buffer()` can now size multiple values at once.
 - `multi_to_string()` to convert multiple values into one `std::string`.
 - Implicit `zview` constructor from `char const *`. (#389)
 - Many `std::string&` parameters are now `zview` or `std::string_view`.
 - Now checking statement parameter lengths for overflow.
 - `#include <array>` in connection.cxx.  (#394)
7.2.1
 - Fix infinite loop in converting `char *` to string. (#377)
 - Deprecated `namedclass`.
 - Convert an entire row using `row::as<type...>()`.
 - Internal rework of `field::to()` and `field::as()` functions.
 - Some more warning options in maintainer mode.
 - Removed the old, DocBook-based tutorial.
 - Fixed wrong `query` and SQLSTATE params to some exceptions. (#378)
7.2.0
 - You can now implicitly convert a `const std::string &` to `zview`.
 - Replaced some overloads for C strings and C++ strings with `zview`.
 - Deprecating `binarystring`.  Use `std::basic_string<std::byte>` instead!
 - Array parser did not recognise escaping in unquoted values.
 - gcc10 test build fix: a result iterator is not the same thing as a `row`.
 - Doc fix: field size does _not_ include terminating zero.  (#356)